AscemuServerDefines.hpp - removed for files with #define... there are special files
Removed special code on banner for various platforms
Added new #define... AE_PLATFORM, AE_ARCHITECTURE (platform, architecture - defined in cmake
Common.hpp.in - add only values for all architectures... to the file (without "else")
changed codestyle in console (+ now you can use help in different registers (Help, help, ?)
add config.yml - added official links

--- a/src/shared/Common.hpp.in
+++ b/src/shared/Common.hpp.in
@@ -10,15 +10,9 @@ This file is released under the MIT license. See README-MIT for more information
 
 namespace fs = std::filesystem;
 
-#ifdef WIN32
-    #define LIBMASK ".dll";
-#else
-    #ifndef __APPLE__
-        #define LIBMASK ".so";
-    #else
-        #define LIBMASK ".dylib";
-    #endif
-#endif
+// Banner information
+#define AE_PLATFORM     "@AE_PLATFORM@"
+#define AE_ARCHITECTURE "@AE_ARCHITECTURE@"
 
 // Time Variables
 namespace TimeVars
