--- a/dep/dbcfile/CMakeLists.txt
+++ b/dep/dbcfile/CMakeLists.txt
@@ -1,25 +1,10 @@
 # Copyright (c) 2014-2024 AscEmu Team <http://www.ascemu.org>
 
 # set up our project name.
-project(dbcfile CXX)
+set(LIBRARY_NAME dbcfile)
 
-set(SRC_DBCFILE
-    dbcfile.cpp
-)
+file(GLOB SRC_DBCFILE *.cpp *.h)
 
-include_directories(
-    ${CMAKE_SOURCE_DIR}/dep/loadlib
-    ${CMAKE_SOURCE_DIR}/dep/libmpq/libmpq
-    ${CMAKE_CURRENT_SOURCE_DIR}
-)
+add_library(${LIBRARY_NAME} STATIC ${SRC_DBCFILE})
 
-add_library(${PROJECT_NAME} STATIC ${SRC_DBCFILE})
-
-# include library dependencies.
-target_link_libraries(${PROJECT_NAME}
-  PUBLIC
-    loadlib
-    libmpq
-)
-
-unset(SRC_DBCFILE)
+set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dependencies")
