--- a/dep/dbcfile/CMakeLists.txt
+++ b/dep/dbcfile/CMakeLists.txt
@@ -7,4 +7,6 @@ file(GLOB SRC_DBCFILE *.cpp *.h)
 
 add_library(${LIBRARY_NAME} STATIC ${SRC_DBCFILE})
 
+target_link_libraries(${LIBRARY_NAME} loadlib libmpq bzip2 zlib)
+
 set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dependencies")
