--- a/dep/libmpq/CMakeLists.txt
+++ b/dep/libmpq/CMakeLists.txt
@@ -1,39 +1,21 @@
 # Copyright (c) 2014-2024 AscEmu Team <http://www.ascemu.org>
 
 # set up our project name.
-project(libmpq C)
+set(LIBRARY_NAME libmpq)
 
-file(GLOB LIBMPQ_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.c ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.h)
+file(GLOB LIBMPQ_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/libmpq/*.c ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/libmpq/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/libmpq/*.h)
 
 if (WIN32)
 set(LIBMPQ_SRCS
-    ${LIBMPQ_SRCS}
     win/winvs_config.h
     win/winvs_dirent.h
     win/winvs_stdint.h
 )
 endif ()
 
-if (UNIX AND NOT IS_64BIT)
-    add_definitions(-D_FILE_OFFSET_BITS=64)
-endif ()
+add_library(${LIBRARY_NAME} STATIC ${LIBMPQ_SRCS})
 
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/win
-    ${CMAKE_CURRENT_SOURCE_DIR}/libmpq
-    ${CMAKE_SOURCE_DIR}/dep/loadlib
-    ${BZIP2_INCLUDE_DIRS}
-    ${ZLIB_INCLUDE_DIRS}
-)
+target_link_libraries(${LIBRARY_NAME} dbcfile loadlib bzip2 zlib)
 
-add_library(${PROJECT_NAME} STATIC ${LIBMPQ_SRCS})
-
-# include library dependencies.
-target_link_libraries(${PROJECT_NAME}
-  PUBLIC
-    loadlib
-    ${ZLIB_LIBRARIES}
-    ${BZIP2_LIBRARIES}
-)
-
-unset(LIBMPQ_SRCS)
+target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libmpq)
+set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dependencies")
