--- a/dep/loadlib/CMakeLists.txt
+++ b/dep/loadlib/CMakeLists.txt
@@ -1,26 +1,13 @@
 # Copyright (c) 2014-2024 AscEmu Team <http://www.ascemu.org>
 
 # set up our project name.
-project(loadlib CXX)
+set(LIBRARY_NAME loadlib)
 
 file(GLOB SRC_LOADLIB *cpp *.h)
 
-set(LOADLIB_SRCS
-    ${SRC_LOADLIB}
-)
+add_library(${LIBRARY_NAME} STATIC ${SRC_LOADLIB})
 
-include_directories(
-    ${CMAKE_SOURCE_DIR}/dep/libmpq/libmpq
-    ${CMAKE_SOURCE_DIR}/dep/libmpq/win
-    ${CMAKE_CURRENT_SOURCE_DIR}
-)
+target_link_libraries(${LIBRARY_NAME} dbcfile libmpq bzip2 zlib)
 
-add_library(${PROJECT_NAME} STATIC ${LOADLIB_SRCS})
-
-# include library dependencies.
-target_link_libraries(${PROJECT_NAME}
-  PUBLIC
-    libmpq
-)
-
-unset(LOADLIB_SRCS)
+target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dependencies")
