--- a/dep/zlib/CMakeLists.txt
+++ b/dep/zlib/CMakeLists.txt
@@ -1,33 +1,11 @@
 # Copyright (c) 2014-2024 AscEmu Team <http://www.ascemu.org>
 
 # set up our project name.
-project(zlib C)
+set(LIBRARY_NAME zlib)
 
-set(SRC_ZLIB
-    adler32.c
-    compress.c
-    crc32.c
-    deflate.c
-    infback.c
-    inffast.c
-    gzclose.c
-    gzlib.c
-    gzread.c
-    gzwrite.c
-    inflate.c
-    infback.c
-    inftrees.c
-    inffast.c
-    trees.c
-    uncompr.c
-    zutil.c
-)
+file(GLOB SRC_ZLIB *.c)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-add_library(${PROJECT_NAME} STATIC ${SRC_ZLIB})
+add_library(${LIBRARY_NAME} STATIC ${SRC_ZLIB})
 
-#set it to the project name.
-set(ZLIB_LIBRARIES ${PROJECT_NAME} CACHE INTERNAL "Zlib Libraries")
-set(ZLIB_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "Zlib include dir" FORCE)
-
-unset(SRC_ZLIB)
+target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dependencies")
