--- a/src/tools/extras/spellfailure_data/CMakeLists.txt
+++ b/src/tools/extras/spellfailure_data/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(${PROJECT_NAME} ${SPELLFAILURE_DATA_SRCS})
 # include library dependencies.
 target_link_libraries(${PROJECT_NAME}
   PUBLIC
-    ${ZLIB_LIBRARIES}
+    zlib
 )
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${ASCEMU_TOOLS_PATH})
