--- a/dep/libmpq/CMakeLists.txt
+++ b/dep/libmpq/CMakeLists.txt
@@ -3,19 +3,25 @@
 # set up our project name.
 set(LIBRARY_NAME libmpq)
 
-file(GLOB LIBMPQ_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/libmpq/*.c ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/libmpq/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/libmpq/*.h)
-
-if (WIN32)
-set(LIBMPQ_SRCS
-    win/winvs_config.h
-    win/winvs_dirent.h
-    win/winvs_stdint.h
-)
-endif ()
+file(GLOB LIBMPQ_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.c ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.h)
 
 add_library(${LIBRARY_NAME} STATIC ${LIBMPQ_SRCS})
 
+set_target_properties(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
+
+if(WIN32)
+  set(WIN_EXTRA_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/win)
+endif()
+
+target_include_directories(${LIBRARY_NAME} 
+  PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${WIN_EXTRA_SRCS}
+    ${CMAKE_CURRENT_SOURCE_DIR}/libmpq
+    ${CMAKE_SOURCE_DIR}/dep/zlib
+    ${CMAKE_SOURCE_DIR}/dep/bzip2
+)
+
 target_link_libraries(${LIBRARY_NAME} dbcfile loadlib bzip2 zlib)
 
-target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libmpq)
-set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dependencies")
+set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dep")
