--- a/dep/loadlib/CMakeLists.txt
+++ b/dep/loadlib/CMakeLists.txt
@@ -10,4 +10,4 @@ add_library(${LIBRARY_NAME} STATIC ${SRC_LOADLIB})
 target_link_libraries(${LIBRARY_NAME} dbcfile libmpq bzip2 zlib)
 
 target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dependencies")
+set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dep")
