--- a/dep/zlib/CMakeLists.txt
+++ b/dep/zlib/CMakeLists.txt
@@ -8,4 +8,4 @@ file(GLOB SRC_ZLIB *.c)
 add_library(${LIBRARY_NAME} STATIC ${SRC_ZLIB})
 
 target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dependencies")
+set_target_properties(${LIBRARY_NAME} PROPERTIES FOLDER "dep")
