--- a/.github/workflows/gcc-linux-test-x64.yml
+++ b/.github/workflows/gcc-linux-test-x64.yml
@@ -2,7 +2,7 @@ name: AscEmu CI
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master, new_cmake ]
   pull_request:
     branches: [ develop ]
 
