--- a/dep/libmpq/CMakeLists.txt
+++ b/dep/libmpq/CMakeLists.txt
@@ -3,20 +3,16 @@
 # set up our project name.
 set(LIBRARY_NAME libmpq)
 
-file(GLOB LIBMPQ_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.c ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.h)
+file(GLOB LIBMPQ_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.c ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.h  ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/*.cpp)
+file(GLOB WIN_EXTRA_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libmpq/win/*.h)
 
-add_library(${LIBRARY_NAME} STATIC ${LIBMPQ_SRCS})
+add_library(${LIBRARY_NAME} STATIC ${LIBMPQ_SRCS} ${WIN_EXTRA_SRCS})
 
 set_target_properties(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
-if(WIN32)
-  set(WIN_EXTRA_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/win)
-endif()
-
 target_include_directories(${LIBRARY_NAME} 
   PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${WIN_EXTRA_SRCS}
+    ${CMAKE_CURRENT_SOURCE_DIR}/win
     ${CMAKE_CURRENT_SOURCE_DIR}/libmpq
     ${CMAKE_SOURCE_DIR}/dep/zlib
     ${CMAKE_SOURCE_DIR}/dep/bzip2
