--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -19,4 +19,4 @@ add_subdirectory(InstanceScripts)
 add_subdirectory(LuaEngine)
 add_subdirectory(MiscScripts)
 add_subdirectory(QuestScripts)
-#add_subdirectory(WorldPvPScripts)
+add_subdirectory(WorldPvPScripts)
